--- a/src/style.css
+++ b/src/style.css
@@ -14,6 +14,7 @@ header {
     padding: 0 1rem;
     grid-column: 1 / 3;
     background-color: burlywood;
+    align-items: center;
 }
 
 header div:first-child {
@@ -48,5 +49,35 @@ header div:last-child ul {
 .sidebar {
     grid-column: 1;
     grid-row: 2;
-    background-color: red;
+    background-color: rgba(255, 255, 255, 0.2);
+    display: flex;
+    flex-direction: column;
+    padding: 2rem;
+    
+}
+
+.sidebar ul {
+    list-style: none;
+    padding: 0;
+}
+
+.sidebar ul li {
+    display: flex;
+    gap: 1rem;
+    align-items: center;
+    margin: 0.5rem;
+}
+
+
+.projects-container {
+    display: flex;
+    flex-direction: column;
+}
+
+.add-project-button {
+    display: flex;
+    align-items: center;
+    gap: 0.5rem;
+    padding: 0.5rem;
+    align-self: center;
 }
